force-app/main/default/objects/Call_Report__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <description>A list of possible high level business topics that have been discussed at a meeting</description>
    <inlineHelpText>A list of possible high level business topics that have been discussed at a meeting. Select all that apply.</inlineHelpText>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Africa Focus</fullName>
            </value>
            <value>
                <fullName>Brainstorming</fullName>
            </value>
            <value>
                <fullName>China Focus</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Consolidations</fullName>
            </value>
            <value>
                <fullName>E-Channels</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Exchange Control</fullName>
            </value>
            <value>
                <fullName>Financial Engineering</fullName>
            </value>
            <value>
                <fullName>Financial Structuring</fullName>
            </value>
            <value>
                <fullName>Forex</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>Interest Rate</fullName>
            </value>
            <value>
                <fullName>International Payment Systems</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mergers and Acquisitions</fullName>
            </value>
            <value>
                <fullName>Money Markets</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Reference Rate Reform</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Special Initiatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>