force-app/main/default/objects/Call_Report__c/fields/Total_Event_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Event_Costs__c</fullName>
    <inlineHelpText>Value represents the Total Event Cost that is split between all the attendees who attended this meeting.</inlineHelpText>
    <label>Total Event Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>