force-app/main/default/objects/Call_Report__c/recordTypes/Meeting.recordType-meta.xml
<RecordType>
    <fullName>Meeting</fullName>
    <active>true</active>
    <description>Select to create a meeting where a client is attending (External) or a client is being discussed (Internal)</description>
    <label>Meeting</label>
</RecordType>