force-app/main/default/objects/Call_Report__c/recordTypes/NBAC_Meeting.recordType-meta.xml
<RecordType>
    <fullName>NBAC_Meeting</fullName>
    <active>true</active>
    <description>Select to create a meeting where NBAC papers are being noted/presented</description>
    <label>NBAC Meeting</label>
</RecordType>