force-app/main/default/objects/Call_Report__c/validationRules/Client_Contact_validation_for_Int_ER_rec.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Contact_validation_for_Int_ER_rec</fullName>
    <active>true</active>
    <description>US-1354:External Event Report should have client contact records and Internal Event Report should be associated with Bank Contact records</description>
    <errorConditionFormula>AND( $Setup.Execution__c.Skip_Validations__c = false,(AND(ISPICKVAL( Meeting_Audience__c , &apos;Internal&apos;),
            Report_Client_Contact__r.RecordType.DeveloperName = &apos;SA_Client_Contact_Record_Type&apos; )))</errorConditionFormula>
    <errorMessage>You cannot have a Client Contact value on an Internal Meeting</errorMessage>
</ValidationRule>