force-app/main/default/objects/Call_Report__c/validationRules/End_Date_Cannot_be_Earlier_than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_be_Earlier_than_Start</fullName>
    <active>true</active>
    <description>The end date of the event report cannot be earlier than the start date of the event report</description>
    <errorConditionFormula>End__c &lt; Start__c &amp;&amp;  $Setup.Execution__c.Skip_Validations__c = false</errorConditionFormula>
    <errorMessage>End Date and Time cannot be Earlier than Start Date and Time</errorMessage>
</ValidationRule>