force-app/main/default/objects/Call_Report__c/validationRules/SA_EventReportLeadLock.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_EventReportLeadLock</fullName>
    <active>true</active>
    <description>Make sure the user cannot add a lead when there is already a contact linked</description>
    <errorConditionFormula>(ISCHANGED( Report_Client_Lead__c ) &amp;&amp; !(CONTAINS(Report_Client_Lead__c, &apos;Deleted&apos;) )) &amp;&amp; !(ISBLANK( Report_Client_Contact__c ))</errorConditionFormula>
    <errorDisplayField>Report_Client_Lead__c</errorDisplayField>
    <errorMessage>You cannot link a Lead if there is already a Contact linked to this Event Report. First &quot;Delete&quot; the Contact link and then add the Lead link.</errorMessage>
</ValidationRule>