force-app/main/default/objects/Call_Report__c/validationRules/Validate_report_duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_report_duration</fullName>
    <active>true</active>
    <description>Validates if the report&apos;s duration is betwee 24 hours</description>
    <errorConditionFormula>(End__c - Start__c)*24 &gt; 24 &amp;&amp;  $Setup.Execution__c.Skip_Validations__c = false</errorConditionFormula>
    <errorMessage>Events can&apos;t be longer than 24 hours (1440 minutes) duration</errorMessage>
</ValidationRule>