force-app/main/default/objects/Call_Report__c/listViews/Angola_CCC_Apoiocliente_Queue_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_CCC_Apoiocliente_Queue_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola CCC Apoiocliente Queue</label>
    <queue>Angola_CCC_Apoiocliente_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>PBB_Angola_Country</roleAndSubordinates>
    </sharedTo>
</ListView>