force-app/main/default/objects/Call_Report__c/listViews/Angola_CCC_BB_Customer_Support_Queue_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_CCC_BB_Customer_Support_Queue_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola CCC BB Customer Support Queue</label>
    <queue>Angola_CCC_BB_Customer_Support_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>PBB_Angola_Country</roleAndSubordinates>
    </sharedTo>
</ListView>