force-app/main/default/objects/Call_Report__c/listViews/Angola_CIB_OG_Case_Queue_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_CIB_OG_Case_Queue_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola CIB O&amp;G Case Queue</label>
    <queue>Angola_CIB_OG_Case_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>PBB_Angola_Country</roleAndSubordinates>
    </sharedTo>
</ListView>