force-app/main/default/objects/Call_Report__c/listViews/Angola_Client_Access_Canais_Case_Queue_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_Client_Access_Canais_Case_Queue_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola Client Access Canais Case Queue</label>
    <queue>Angola_Client_Access_Canais_Case_Queue</queue>
    <sharedTo>
        <roleAndSubordinates>PBB_Angola_Country</roleAndSubordinates>
    </sharedTo>
</ListView>