force-app/main/default/objects/Call_Report__c/listViews/Angola_CST_CIB_Overflow_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_CST_CIB_Overflow_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola CST CIB-Overflow</label>
    <queue>Angola_CST_CIB_Overflow</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>