force-app/main/default/objects/Call_Report__c/listViews/Angola_Support_Cash_Centre_Call_Report.listView-meta.xml
<ListView>
    <fullName>Angola_Support_Cash_Centre_Call_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Angola Support Cash Centre</label>
    <queue>Angola_Support_Cash_Centre</queue>
    <sharedTo>
        <roleAndSubordinates>PBB_Angola_Country</roleAndSubordinates>
    </sharedTo>
</ListView>